resolve width issue for how-to-steps-carousel and ax-columns on mobile

--- a/express/code/blocks/ax-columns/ax-columns.css
+++ b/express/code/blocks/ax-columns/ax-columns.css
@@ -231,7 +231,6 @@
 .section .ax-columns > div {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   padding: 40px 0;
 }
